@@ -74,6 +74,7 @@ Change log next version
 * XmlPathConfig supports declaring namespaces which means that XmlPath is now namespace aware if needed.
 * Added ability to supply an XmlPathConfig instance when using the xmlPath() method from a REST Assured Response object. For example :
       XmlPath xmlPath = get("/namespace-example").xmlPath(xmlPathConfig().with().declaredNamespace("ns", "http://localhost/"));
+* Non-backward compatible change: RestAssuredConfig no longer accepts a JsonPathConfig, it now uses a JsonConfig object instead.
 
 Change log 1.8.1 (2013-06-07)
 -----------------------------
